# eisenpower-rs

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  tasks.db
migrations/: 001_create_tasks.sql
src/: main.orig.rs  main.rs  main_fixed.rs
static/: style.css
