[package]
name = "eisenpower-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
axum = "0.8.4"
headers = "0.4"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
anyhow = "1"

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
codegen-units = 1